--- a/style.css
+++ b/style.css
@@ -29,3 +29,36 @@
     font-size: 17px;
     vertical-align: middle;
 }
+
+
+
+/* Hero */
+
+.hero .carousel-item img{
+    height: 750px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.hero .carousel-item::before{
+    content: '';
+    background-color: rgb(11, 52, 52);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    opacity: .7;
+}
+
+/* .hero .carousel-item .carousel-container{ */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    right: 0;
+    left: 0;
+}
