--- a/style.css
+++ b/style.css
@@ -26,8 +26,21 @@
 
 /*Header CSS*/
 .top-header-span{
-    font-size: 17px;
+    font-size: 15px;
     vertical-align: middle;
+}
+
+
+/* navber */
+.container{
+    height: 42px;
+    color: #ffffff;
+    
+}
+
+/* cbpi-logo */
+.cbpi-logo{
+    height: 58px;
 }
 
 
@@ -35,7 +48,7 @@
 /* Hero */
 
 .hero .carousel-item img{
-    height: 750px;
+    height: 600px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -43,7 +56,7 @@
 
 .hero .carousel-item::before{
     content: '';
-    background-color: rgb(11, 52, 52);
+    background-color: rgba(0, 0, 0, 0.816);
     position: absolute;
     top: 0;
     bottom: 0;
@@ -52,7 +65,7 @@
     opacity: .7;
 }
 
-/* .hero .carousel-item .carousel-container{ */
+.hero .carousel-item .carousel-container{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -61,4 +74,24 @@
     top: 0;
     right: 0;
     left: 0;
+}
+
+.hero .carousel-topics{
+    text-align: center;
+    width: 70%;
+}
+
+.hero .carousel-heading-topics{
+    color: rgb(0, 150, 170);
+    font-size: 39px;
+    font-weight: 650;
+}
+
+.hero .carousel-heading-topics span{
+    color: rgb(4, 137, 11);
+}
+
+.hero .carousel-item p{
+    font-size: 14px;
+    color: var(--LightColor);
 }
